fixed first about image not reappearing on firefox

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-	zoom:85%;
+	zoom:88%;
 	margin: 0%;
 	border: 0%;
 
@@ -695,6 +695,7 @@ h1 {
 	grid-column-end: 1;
 	grid-row-start: 1;
 	grid-row-end: 1;
+	/* transform: translate(-40px,15px); */
 }
 .about_picture:nth-child(2) {
 	grid-column-start: 2;
